# C--Random-Particle-Generator

./: .clang-tidy  .clang_tidy  .gitignore  CMakeLists.txt  README.md  cygwin_toolchain.cmake
src/: camera.cpp  camera.h  controls.cpp  controls.h  coordinates.cpp  coordinates.h  glfw_bindings.cpp  glfw_bindings.h  main.cpp  math_concepts.h  math_core.h  particle.cpp  particle.h  particle_concepts.h  particle_simulation.cpp  particle_simulation.h  particle_system.cpp  particle_system.h  random_manager.cpp  random_manager.h  random_or_constant.cpp  random_or_constant.h  scene.cpp  scene.h  shader.cpp  shader.h  sys_time.cpp  sys_time.h  utils.cpp  utils.h
src/entities/: entity.cpp  entity.h  entity_registry.cpp  entity_registry.h  particle.cpp  particle.h  particle_color_algs.cpp  particle_color_algs.h  particle_simulation.cpp  particle_simulation.h  particle_system.cpp  particle_system.h
src/math/: base.h  color.h  physics.h  units.h  vector3d.h
src/math/random/: distribution.cpp  distribution.h  generator.cpp  generator.h  random_enums.h  random_manager.cpp  random_manager.h
src/math/random/distributions/: general.h  log_normal.cpp  log_normal.h  normal.cpp  normal.h  uniform.cpp  uniform.h
src/menus/: roc_control.cpp  roc_control.h  settings.cpp  settings.h
src/physics/: base.h  kinematics.h  rigid_body.h
src/rendering/: draw.cpp  draw.h  preloaded_shaders.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  shader_manager.cpp  shader_manager.h
src/shaders/: Particle.frag  Particle.vert  RainbowParticle.vert
src/system/: bindings.cpp  bindings.h  control_enums.h  control_manager.cpp  control_manager.h  controls.cpp  controls.h  kbm_movement.cpp  kbm_movement.h
src/window/: hud_manager.cpp  hud_manager.h  window.cpp  window.h
src/window/hud/: button.cpp  button.h  checkbox.cpp  checkbox.h  color_picker.cpp  color_picker.h  combo.cpp  combo.h  fps_counter.cpp  fps_counter.h  group.cpp  group.h  hud_window.cpp  hud_window.h  label.cpp  label.h  multi_widget.cpp  multi_widget.h  optional_element.cpp  optional_element.h  slider.cpp  slider.h  widget.cpp  widget.h
